Add modality dropout for MER2024 features

--- a/minigpt4/configs/datasets/firstface/mer2024.yaml
+++ b/minigpt4/configs/datasets/firstface/mer2024.yaml
@@ -5,3 +5,5 @@ datasets:
     build_info:
       image_path: /home/czb/big_space/datasets/Emotion/MER2024/video-unlabeled-with-test2noise
       ann_path: /home/czb/big_space/datasets/Emotion/MER2024/MER2024_noise_pseu_label_8348.txt
+      au_feature_dir: openface_au_23_UTT
+      modality_dropout_prob: 0.0
